--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 <h3> Wisden Ranking of all-time great test batesmen... </h3> 
 <script>
 	var columns = [
-		{src:"https://amarroyds.github.io/images/Bradman.png"}, 
-		{src:"https://amarroyds.github.io/images/Sachine.png"}, 
-		{src:"https://amarroyds.github.io/images/Richards.png"},
-		{src:"https://amarroyds.github.io/images/Sobers.png"},
-		{src:"https://amarroyds.github.io/images/border.png"},
+		{src:"https://pgambhir88.github.io/ronaldo.jpg"}, 
+		{src:"https://pgambhir88.github.io/messi.jpg"}, 
+		{src:"https://pgambhir88.github.io/robert.jpg"},
+		{src:"https://pgambhir88.github.io/Edin.jpg"},
+		{src:"https://pgambhir88.github.io/ciro.jpg"},
 	];
 	
 	var ranking = [ "1.Donald Bradman", 
