--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
 
 <div class="text-things">
     <h1> Who is the greatest footballer between 2016 to 2020?</h1>
-	<p> In the last 148 years history of Test-cricket, the world has seen many great batsmen.
-	Over the years, it is been a natural question among numerous fans and experts alike.
-	Surprisingly, there are not many frameworks or rating systems developed to answer this question.
-	In the year 2002, Wisden Magazine published their first such 
-	<a href="https://archive.ph/20070110222511/http://www.cricinfo.com/ci/content/story/113623.html">rating</a>.
-	Which was later updated. The updated data for the top five batsmen are available below.
-	(<a href="https://en.wikipedia.org/wiki/Wisden_100#cite_note-8">reference</a>)
+	<p> Football was first played in 1869 and world has seen many great footballers over the years, 
+	     We all have a question in the mind, who is the best footballer now. Surprisingly, there are not many 
+		rating system developed to answer this question. We have created the platform on the basis of performance 
+		between 2016 to 2020.
+		
 	</p>  
 </div>
 <div id="wisden_ranking">
