--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 		{src:"https://pgambhir88.github.io/ciro.jpg"},
 	];
 	
-	var ranking = [ "1.Donald Bradman", 
-					"2.Sachin Tendulkar",
-					"3.Viv Richards",
-					"4.Garfield Sobers",
-					"5.Allan Border"]
+	var ranking = [ "1.Cristiano Ronaldo", 
+					"2.Lionel Messi",
+					"3.Robert Lewandowski",
+					"4.Edin Dzeko",
+					"5.Ciro Immobile"]
 	var points =["1349.0","1000.5","913.9","912.0","911.2"]
 	
 	/*const data = await d3.csv(
