--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</p>  
 </div>
 <div id="wisden_ranking">
-<h3> Wisden Ranking of all-time great test batesmen... </h3> 
+<h3> Ranking of great footballers between 2016 to 2020... </h3> 
 <script>
 	var columns = [
 		{src:"https://pgambhir88.github.io/ronaldo.jpg"}, 
@@ -77,7 +77,7 @@
 					"3.Robert Lewandowski",
 					"4.Edin Dzeko",
 					"5.Ciro Immobile"]
-	var points =["1349.0","1000.5","913.9","912.0","911.2"]
+	var points =["751","744","587","583","534"]
 	
 	/*const data = await d3.csv(
 		'https://amarroyds.github.io/Wisden_ranking.csv');*/
