--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> 
 
-	<!--circle {fill: lightblue; stroke: black;} -->
+	<!--circle {fill: lightorange; stroke: black;} -->
 	body {
             font-family: "Arial", sans-serif;
         }
