--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ async function byCriteria() {
 
    var mousemove = function(d) {
     tooltip
-	  .html("Player: " + d.Player NAmes + "  Shots: " + d.Shots + "  Goals: " + d.Goals + "  Avg: " + d.xG Per Avg Match + "  Goals per Match %: " + d.Goals per Match)
+	  .html("Player: " + d.Player NAmes + "  Shots: " + d.Shots + "  Goals: " + d.Goals + "  Avg: " + d.xG_Per_Avg_Match + "  Goals per Match %: " + d.Goals_per_Match)
 	  .style("left", (d3.mouse(this)[0]) + "px") // It is important to put the +90: other wise the tooltip is exactly where the point is an it creates a weird effect
       .style("top", (d3.mouse(this)[1]) + "px");
 	  
@@ -394,10 +394,10 @@ async function byCriteria() {
    .data(data)
    .enter()
     .append('circle')
-      .attr('cx', function (d,i) { return x(d.Runs); })
-      .attr('cy', function (d,i) { return y(d.Hundred);})
-      .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.Avg);})
-	  .style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.conversion_pct);})
+      .attr('cx', function (d,i) { return x(d.Shots); })
+      .attr('cy', function (d,i) { return y(d.Goals);})
+      .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.xG_Per_Avg_Match);})
+	  .style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.Goals_per_Match);})
 	.on("mouseover", mouseover )
     .on("mousemove", mousemove )
     .on("mouseleave", mouseleave );
@@ -418,10 +418,10 @@ async function byCriteria() {
          .data(data)
 		 .transition()
          .duration(1000)
-			.attr('cx', function (d,i) { return x(d.Runs); })
-			.attr('cy', function (d,i) { return y(d.Hundred);})
-            .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.Avg);})
-			.style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.conversion_pct);});
+			.attr('cx', function (d,i) { return x(d.Shots); })
+			.attr('cy', function (d,i) { return y(d.Goals);})
+            .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.xG_Per_Avg_Match);})
+			.style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.Goals_per_Match);});
 		//.append('title') //possible way of implementing tooltip
         //.text((d) => `Player: ${d.Player}`);
 
