--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	var points =["751","744","587","583","534"]
 	
 	/*const data = await d3.csv(
-		'https://amarroyds.github.io/Wisden_ranking.csv');*/
+		'https://pgambhir88.github.io/best_footballer_v2.csv');*/
 
 	var table = d3.select("#wisden_ranking").append('table');
 	var thead = table.append('thead');
@@ -123,21 +123,16 @@
 </div>-->
 
 <div class="text-things">
-		<p>However, not all agree with the Wisden ranking. Test cricket has evolved over time
-		and become more competitive when Donald Bradman used to play cricket. In their opinion
-		Sachin Tendulkar is all-time great. Often, the choice of the greatest batsman is
-		driven by emotions and using limited data.</p>
+		<p>FIFA has published the ranking year on year on basis of certain creteria but everyone is not convinced on their ranking system so we have picked up 
+			data from 2016 to 2020 and on the basis of maximum number of shots, goals, matches played and on average basis we have calculated the 
+			player's ranking. .</p>
 	   
 		<p>So, below is a tool for the fans to explore on their own and support their argument
-		with data. In this top 100 batmens' batting performance can be compared using aggregate statistics 
-		such as runs and hundreds. There are other normalized statistics such as batting average
-		and conversion percentage i.e., what percentage of 50+ score converted in a hundred can be 
-		used to remove the variability of time and opponents they have played against.</p>
+		with data. In this we picked up data of all the players and calculated the ranking on basis of above mentioned criteria.</p>
 	
 		<p><b>We are confident you will gain different perspective driven by data as you 
 		add the parameters progressively using <i>the dropdown provided below,</i></b></p>
 </div>
-
 <!-- Initialize a select button -->
 <div>
 	<select id="selectButton" class="dropdown my-menu"></select>
