--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <div class="text-things">
 		<p>FIFA has published the ranking year on year on basis of certain creteria but everyone is not convinced on their ranking system so we have picked up 
-			data from 2016 to 2020 and on the basis of maximum number of shots, goals, matches played and on average basis we have calculated the 
+			data from 2016 to 2020 and on the basis of maximum number of Runs, goals, matches played and on average basis we have calculated the 
 			player's ranking. .</p>
 	   
 		<p>So, below is a tool for the fans to explore on their own and support their argument
@@ -272,11 +272,11 @@ async function byCriteria() {
 
    var mousemove = function(d) {
     tooltip
-	  .html("Player: " + d.Player + "  Runs: " + d.Runs + "  Goals: " + d.Goals + "  Avg: " + d.Avg + "  Conversion %: " + d.conversion_pct)
+	  .html("Player: " + d.Player + "  Shots: " + d.Shots + "  Goals: " + d.Goals + "  Avg: " + d.Avg + "  Conversion %: " + d.conversion_pct)
 	  .style("left", (d3.mouse(this)[0]) + "px") // It is important to put the +90: other wise the tooltip is exactly where the point is an it creates a weird effect
       .style("top", (d3.mouse(this)[1]) + "px");
 	  
-	//	  .html("Player: " + d.Player + "  Runs: " + d.Runs + "  Goals: " + d.Goals + "  Avg: " + d.Avg + "  Conversion %: " + d.conversion_pct)
+	//	  .html("Player: " + d.Player + "  Shots: " + d.Shots + "  Goals: " + d.Goals + "  Avg: " + d.Avg + "  Conversion %: " + d.conversion_pct)
 	
 	//console.log(d3.mouse(this)[0]);
 	//console.log(d3.mouse(this)[1]);
@@ -358,7 +358,7 @@ async function byCriteria() {
    .data(data)
    .enter()
     .append('circle')
-      .attr('cx', function (d,i) { return x(d.Runs); })
+      .attr('cx', function (d,i) { return x(d.Shots); })
       .attr('cy', function (d,i) { return y(d.Goals);})
       .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.Avg);})
 	  .style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.conversion_pct);})
@@ -382,7 +382,7 @@ async function byCriteria() {
          .data(data)
 		 .transition()
          .duration(1000)
-			.attr('cx', function (d,i) { return x(d.Runs); })
+			.attr('cx', function (d,i) { return x(d.Shots); })
 			.attr('cy', function (d,i) { return y(d.Goals);})
             .attr('r', function(d,i) {return bubbleRadius(selectedCriteria,d.Avg);})
 			.style("fill", function(d,i) {return bubbleColor(selectedCriteria,d.conversion_pct);});
@@ -407,7 +407,7 @@ async function byCriteria() {
 }
 </script>
 <div id="contacts">
-	<p> 1. Datasource:https://www.kaggle.com/veeralakrishna/icc-test-cricket-runs?select=ICC+Test+Bat+3001.xlsx</br>
+	<p> 1. Datasource:https://www.kaggle.com/veeralakrishna/icc-test-cricket-Shots?select=ICC+Test+Bat+3001.xlsx</br>
         2. Cricket: https://en.wikipedia.org/wiki/Cricket</br>
 	    3. Annotation & legend library credit:www.susielu.com</br></p>
 </div>
