--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ async function byCriteria() {
             "translate(" + (width/2) + " ," + 
                            (height + 30) + ")")
       .style("text-anchor", "middle")
-      .text("Total runs scored");
+      .text("Total Shots scored");
 	  
     // text label for the y axis
 	svg.append("text")
@@ -248,7 +248,7 @@ async function byCriteria() {
       .attr("y", 0 - (margin.left/2))
       .attr("x",0 - (height/2))
       .style("text-anchor", "middle")
-      .text("# of Hundres scored");  
+      .text("Total Goals Scored");  
 
 	
    // Add a tooltip div. Here I define the general feature of the tooltip: stuff that do not depend on the data point.
