--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</p>   
 </div>
 <div id="wisden_ranking">
-<h3> Wisden Ranking of all-time great test batesmen... </h3> 
+<h3> FIFA Ranking of greatest footballer(2016-2020)... </h3> 
 <script>
 	var columns = [
 		{src:"https://pgambhir88.github.io/ronaldo.jpg"}, 
