--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
 <!--<svg width=960 height=600></svg>-->
 <!-- Load d3-annotation & legend; Credit: www.susielu.com-->
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
-<script src="https://cdnjs.com/libraries/d3-legend"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+<!-- <script src="https://cdnjs.com/libraries/d3-legend"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script> -->
+<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
 
 <script>
