--- a/index.html
+++ b/index.html
@@ -311,7 +311,30 @@ async function byCriteria() {
 	
 	// Add annotations...
 	// Features of the annotation
+	// Add annotations...
+	// Features of the annotation
+	const annotations = [
+		
+		{
+			note: {
+			label: "A modern day hero who made most hundreds & runs",
+			title: "Ronaldo"
+		},
+			x: 880 + margin.left,
+			y: 10 + margin.top,
+			dy: 25,
+			dx: -20
+		}
+		
+	]
+
+	// Add annotation to the chart
+	const makeAnnotations = d3.annotation()
+     .annotations(annotations)
 	
+	d3.select("#icc_scatter")
+	.append("g")
+	.call(makeAnnotations)
 	
 	//Add legend for color i.e. Conversion %
 	svg.append("g")
