--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ async function byCriteria() {
 		
 		{
 			note: {
-			label: "A modern day hero who made most hundreds & runs",
-			title: "Ronaldo"
+			label: "Player have scored most goals",
+			title: "Messi"
 		},
 			x: 880 + margin.left,
 			y: 11 + margin.top,
