--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		
 	</p>   
 </div>
-<div id="wisden_ranking">
+<div id="fifa_ranking">
 <h3> FIFA Ranking of greatest footballer(2016-2020)... </h3> 
 <script>
 	var columns = [
@@ -83,7 +83,7 @@
 	/*const data = await d3.csv(
 		'https://pgambhir88.github.io/best_footballer_v2.csv');*/
 
-	var table = d3.select("#wisden_ranking").append('table');
+	var table = d3.select("#fifa_ranking").append('table');
 	var thead = table.append('thead');
 
 	thead.append('tr')
