--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ async function init() {
       .append("circle")
         .attr("cx", function(d) { return (x(d.Shots)); })
         .attr("cy", function(d) { return (y(d.Goals)); })
-        .attr("r", function(d) { return (Number(4) ); });
+        .attr("r", function(d) { return (Number(d.Avg) ); });
        
     d3.select("svg").append("g")
 .attr("transform", "translate(" + margin + "," + margin + ")")
